frontend/tests/cases/negative/security.gr.output
Type checking failed: 
Type error: frontend/tests/cases/negative/security.gr:17:8:
Private value cannot be moved to level Public